style: finished layout with header and footer

--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -10,7 +10,7 @@
 
 <th:block data-th-replace="${ressourcesSupp} ?: ~{}"></th:block>
 
-<link rel="icon" data-th-href="@{/images/logoENI.png}" sizes="32x32">
+<link rel="icon" data-th-href="@{/images/logo-auction.png}" sizes="32x32">
 </head>
 <body>
 	<div data-th-replace="~{fragments/fragment-entete :: frag-entete}"></div>
@@ -18,6 +18,6 @@
 	<main data-th-replace="${contenuPage} ?: ~{}">Contenu de la page
 	</main>
 
-	<div data-th-replace="~{fragments/fragment-piedpage :: frag-piedpage}"></div>
+	<div data-th-replace="~{fragments/fragment-piedpage :: frag-piedpage}"></div> 
 </body>
 </html>
