fix: ajout lien encheres

--- a/src/main/resources/templates/fragments/fragment-entete.html
+++ b/src/main/resources/templates/fragments/fragment-entete.html
@@ -15,7 +15,7 @@
 	</section>
 	<nav>
 		<ul>
-			<li><a href="/">Accueil</a></li>
+			<li><a href="/encheres">Accueil</a></li>
 
 
 			<li><a href="/login">S'inscrire - Se connecter</a></li>
