--- a/src/main/resources/templates/view-profil-modifier.html
+++ b/src/main/resources/templates/view-profil-modifier.html
@@ -8,7 +8,7 @@
 
 <head>
 <!-- Accueil comme titre de page -->
-<title>Nouveau Profil</title>
+<title>Mon Profil</title>
 
 <th:block id="ressources-css">
 	<link rel="stylesheet" href="/css/encheres.css">
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<main>
-		<div data-th-replace="~{fragments/fragment-profil-form :: frag-profil-form('/profil/creer', 'Nouveau Profil')}"></div>	
+		<div data-th-replace="~{fragments/fragment-profil-form :: frag-profil-form('/profil/modifier', 'Mon Profil')}"></div>	
 	</main>
 </body>
 </html>
