feat : gestion profil layout

--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -11,7 +11,7 @@
 <th:block data-th-replace="${ressourcesSupp} ?: ~{}"></th:block>
 
 <link rel="icon" data-th-href="@{/images/logoENI.png}" sizes="32x32">
-<script src="@{/js/bootstrap.min.js}"></script>
+<script data-th-src="@{/js/bootstrap.min.js}"></script>
 
 <link rel="icon" data-th-href="@{/images/logo-auction.png}" sizes="32x32">
 </head>
