feat : BO adresse

--- a/src/main/resources/templates/fragments/fragment-entete.html
+++ b/src/main/resources/templates/fragments/fragment-entete.html
@@ -19,7 +19,9 @@
 
 
 			<li><a href="/login">S'inscrire - Se connecter</a></li>
-
+			
+			<li><a href="/profil/modifier">test</a></li>
+			
 		</ul>
 	</nav>
 </header>
