--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title data-th-replace="${titrePage}"data-th-text="#{nom-application}"></title>
-<link rel="stylesheet" data-th-src="@{/css/bootstrap.min.css}">
+<link rel="stylesheet" data-th-href="@{/css/bootstrap.min.css}">
 <link rel="stylesheet" data-th-href="@{/css/layout.css}">
 <link rel="stylesheet" data-th-href="@{/css/general.css}">
 
