feat : Creation profil

--- a/src/main/resources/templates/fragments/fragment-entete.html
+++ b/src/main/resources/templates/fragments/fragment-entete.html
@@ -22,6 +22,7 @@
 			
 			<li><a href="/profil/modifier">test</a></li>
 			
+			<li><a href="/profil/creer">test2</a></li>
 		</ul>
 	</nav>
 </header>
