--- a/src/main/resources/templates/view-profil-creer.html
+++ b/src/main/resources/templates/view-profil-creer.html
@@ -11,7 +11,7 @@
 <title>Nouveau Profil</title>
 
 <th:block id="ressources-css">
-	<link rel="stylesheet" href="/css/encheres.css">
+	<link rel="stylesheet" data-th-href="@{/css/profil.css}">
 </th:block>
 </head>
 <body>
