--- a/src/main/resources/static/css/encheres.css
+++ b/src/main/resources/static/css/encheres.css
@@ -1,81 +1,117 @@
 .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 40%;
-    margin: 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	width: 40%;
+	margin: 0;
 }
 
-.entete-encheres{
-	margin-bottom:10px;
+.entete-encheres {
+	margin-bottom: 10px;
 }
 
 .filtres {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .input-text {
-    width: 250px;
-    padding: 5px;
-    border: 1px solid black;
-    border-radius: 20px;
+	width: 250px;
+	padding: 5px;
+	border: 1px solid black;
+	border-radius: 20px;
 }
 
 .select-box {
-    width: 150px;
-    padding: 5px;
-    border: 1px solid black;
-    border-radius: 5px;
+	width: 150px;
+	padding: 5px;
+	border: 1px solid black;
+	border-radius: 5px;
 }
 
 .btn-filtres {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
 }
 
 .btn {
-    width: 150px;
-    padding: 8px;
-    border: 1px solid black;
-    background: white;
-    text-align: center;
-    cursor: pointer;
+	width: 150px;
+	padding: 8px;
+	border: 1px solid black;
+	background: white;
+	text-align: center;
+	cursor: pointer;
 }
 
 .filtres-select {
-    width: 200px;
-    padding: 5px;
-    border: 1px solid black;
-    border-radius: 5px;
+	width: 200px;
+	padding: 5px;
+	border: 1px solid black;
+	border-radius: 5px;
 }
 
 .filtres-radios {
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
+	display: flex;
+	flex-direction: row;
+	gap: 5px;
 }
 
 .filtres-radio {
-    display: flex;
-    align-items: center;
-    gap: 5px;
+	display: flex;
+	align-items: center;
+	gap: 5px;
 }
 
-.entete-encheres{
-	width:100%;
+.entete-encheres {
+	width: 100%;
 }
 
-.cards{
-	width:100%;
-	display:flex;
-	flex-direction:row;
-	flex-wrap:wrap;
+.cards {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 }
 
-.card{
-	width:30%;
-	margin:10px;
+.card {
+	width: 30%;
+	margin: 10px;
 }
 
+.container-info {
+	display: flex;
+	justify-content: space-between;
+	margin: 30px auto;
+	flex-wrap: wrap
+	
+}
+
+.container-info > div {
+	width: 50%;
+}
+.container-info p {
+	margin: 10px 0;
+}
+
+.container-info .label {
+	font-weight: bold;
+}
+.centred{
+	margin: 0 auto;
+}
+.centred h1 {
+	text-align: center;
+}
+.validation-button {
+	padding: 15px 40px;
+	border: 2px solid black;
+	background-color: white;
+	cursor: pointer;
+	text-align: center;
+	text-transform: uppercase;
+	letter-spacing: .09em;
+	text-decoration: none;
+	color: black;
+	margin: 0 auto;
+}
