--- a/src/main/resources/templates/view-encheres.html
+++ b/src/main/resources/templates/view-encheres.html
@@ -26,8 +26,7 @@
 						class="select-box">
 						<option>Toutes</option>
 					</select>
-					<th:block
-						data-th-if="${#authorization.expression('hasRole(''ROLE_USER'')')}">
+					<th:block data-th-if="${#authorization.expression('hasRole(''USER'')')}">
 						<div class="filtres-radios">
 							<div class="filtres-radio">
 								<input type="radio" id="achats" name="type" checked> <label
@@ -60,7 +59,7 @@
 				data-th-each="article : ${articles}">
 				<div class="row g-0">
 					<div class="col-md-4">
-						<img src="..." class="img-fluid rounded-start" alt="...">
+						<img src="" class="img-fluid rounded-start" alt="Image de l'article">
 					</div>
 					<div class="col-md-8">
 						<div class="card-body">
