fix: auth error

--- a/src/main/resources/templates/fragments/fragment-entete.html
+++ b/src/main/resources/templates/fragments/fragment-entete.html
@@ -6,8 +6,7 @@
 				data-th-src="@{/images/logo-auction.png}"><span
 				data-th-text="Eni-Encheres"></span></a>
 
-			<th:block
-				data-th-if="${#authorization.expression('isAuthenticated()')}">
+			<th:block data-th-if="${#authorization.expression('isAuthenticated()')}">
 				<span data-th-text="'['+ ${membreEnSession.pseudo}+']'"></span>
 			</th:block>
 
@@ -19,9 +18,9 @@
 
 
 			<li><a href="/login">S'inscrire - Se connecter</a></li>
-			
+
 			<li><a href="/profil/modifier">test</a></li>
-			
+
 			<li><a href="/profil/creer">test2</a></li>
 		</ul>
 	</nav>
