--- a/src/main/resources/templates/fragments/fragment-entete.html
+++ b/src/main/resources/templates/fragments/fragment-entete.html
@@ -1,4 +1,4 @@
-<header xmlns:th="http://www.thymeleaf.org"
+<header xmlns:th="http://www.thymeleaf.org" 
 	data-th-fragment="frag-entete">
 	<section id="nav-title">
 		<h1>
@@ -6,8 +6,7 @@
 				data-th-src="@{/images/logo-auction.png}"><span
 				data-th-text="Eni-Encheres"></span></a>
 
-			<th:block
-				data-th-if="${#authorization.expression('isAuthenticated()')}">
+			<th:block data-th-if="${#authorization.expression('isAuthenticated()')}">
 				<span data-th-text="'['+ ${membreEnSession.pseudo}+']'"></span>
 			</th:block>
 
