--- a/src/main/resources/templates/view-profil-modifier.html
+++ b/src/main/resources/templates/view-profil-modifier.html
@@ -8,7 +8,7 @@
 
 <head>
 <!-- Accueil comme titre de page -->
-<title data-th-text="#{Profile.titreForm.modifier}"></title>
+<title data-th-text="#{Profil.titreForm.modifier}"></title>
 
 <th:block id="ressources-css">
 	<link rel="stylesheet" data-th-href="@{/css/profil.css}">
