--- a/src/main/resources/templates/fragments/fragment-profil-form.html
+++ b/src/main/resources/templates/fragments/fragment-profil-form.html
@@ -8,7 +8,7 @@
 	
 		<ul class="flex-outer list-group">
 		<li>
-			<label for="inputPseudo" data-th-text="#{Profil.pseudo}"></label> 
+			<label for="inputPseudo" data-th-text="#{Profil.pseudo.req}"></label> 
 			<th:block data-th-if="${#strings.contains(action,'modifier')}">
 				<span class="input-display" data-th-text="*{pseudo}"></span>
 			</th:block>
@@ -18,18 +18,18 @@
 			</th:block>
 		</li>
 		<li>
-			<label for="inputNom" data-th-text="#{Profil.nom}"></label> 
+			<label for="inputNom" data-th-text="#{Profil.nom.req}"></label> 
 			<input type="text" id="inputNom" required data-th-field="*{nom}" />
 			<div	data-th-replace="~{fragments/errors/fragment-error :: frag-error('nom')}"></div>
 		</li>
 		<li>
-			<label for="inputPrenom" data-th-text="#{Profil.prenom}"></label> 
+			<label for="inputPrenom" data-th-text="#{Profil.prenom.req}"></label> 
 			<input type="text" id="inputPrenom" required data-th-field="*{prenom}" />
 			<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('prenom')}"></div>
 			
 		</li>
 		<li>
-			<label for="inputEmail" data-th-text="#{Profil.email}">Email : </label> 
+			<label for="inputEmail" data-th-text="#{Profil.email.req}">Email : </label> 
 			<input type="text" id="inputEmail" data-th-field="*{email}" />
 			<th:block data-th-if="${#strings.contains(action,'creer')}">
 				<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('email')}"></div>
@@ -37,7 +37,7 @@
 			
 		</li>
 		<li>
-			<label for="inputTelephone" data-th-text="#{Profil.telephone}"></label> 
+			<label for="inputTelephone" data-th-text="#{Profil.telephone.req}"></label> 
 			<input type="text" id="inputTelephone" data-th-field="*{telephone}" />
 			<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('telephone')}"></div>
 			
@@ -51,7 +51,7 @@
 		</th:block>
 		<th:block data-th-if="${#strings.contains(action,'creer')}">
 			<li>
-				<label for="inputMotDePasse" data-th-text="#{Profil.motDePasse}"></label> 
+				<label for="inputMotDePasse" data-th-text="#{Profil.motDePasse.req}"></label> 
 				<input type="password" id="inputMotdDePasse" required data-th-field="*{motDePasse}"  data-th-readonly="${#strings.contains(action,'modifier')}"/>
 					<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('motDePasse')}"></div>			
 			</li>
