refactor : sur controleur utilisateur

--- a/src/main/resources/templates/view-profil.html
+++ b/src/main/resources/templates/view-profil.html
@@ -39,7 +39,7 @@
 				</ul>
 			</div>
 			<div class="btn">
-				<a class="btn" data-th-text="#{Profil.btn.modifier}" data-th-href="@{/profil/modifier}"></a>
+				<a class="btn btn-primary" data-th-text="#{Profil.btn.modifier}" data-th-href="@{/profil/modifier}"></a>
 			</div>
 			</div>
 		</section>	
