fix: ajout affiche pseudo par article

--- a/src/main/resources/templates/view-articles.html
+++ b/src/main/resources/templates/view-articles.html
@@ -80,7 +80,7 @@
 
 								<p class="card-text" data-th-text="${article.dateFinEncheres}">Fin
 									de l'enchère</p>
-								<p class="card-text">Vendeur</p>
+								<p class="card-text" data-th-text="${article.vendeur.pseudo}">Vendeur</p>
 							</div>
 						</div>
 					</div>
