--- a/src/main/resources/templates/view-login.html
+++ b/src/main/resources/templates/view-login.html
@@ -24,7 +24,7 @@
 					<a href="/tofigureout">Mot de passe oublié</a>
 				</li>
 				<li>
-					<a href="/register" class="create-account">Créer un compte</a>
+					<a href="/profil/creer" class="create-account">Créer un compte</a>
 				</li>
 			</ul>
 		</form>
