--- a/src/main/resources/templates/fragments/fragment-profil-form.html
+++ b/src/main/resources/templates/fragments/fragment-profil-form.html
@@ -44,10 +44,10 @@
 		</li>
 		<li>
 			<label for="inputAdresseRue">Adresse (*): </label> 
-			<input type="text" id="inputAdresseRue" required data-th-field="*{personne.adresse.rue}" />
-			<input type="text" id="inputAdresseCodePostal" required data-th-field="*{personne.adresse.codePostal}" />
-			<input type="text" id="inputAdresseVille" required data-th-field="*{personne.adresse.ville}" />
-			<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('personne.adresse')}"></div>
+			<input type="text" id="inputAdresseRue" required data-th-field="${adresse.rue}" />
+			<input type="text" id="inputAdresseCodePostal" required data-th-field="${adresse.codePostal}" />
+			<input type="text" id="inputAdresseVille" required data-th-field="${adresse.ville}" />
+			<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('adresse')}"></div>
 			
 		</li>
 		<th:block data-th-if="${#strings.contains(action,'modifier')}">
@@ -62,7 +62,11 @@
 				<input type="password" id="inputMotdDePasse" required data-th-field="*{motDePasse}"  data-th-readonly="${#strings.contains(action,'modifier')}"/>
 					<div data-th-replace="~{fragments/errors/fragment-error :: frag-error('motDePasse')}"></div>			
 			</li>
-			
+			<li>
+				<label for="inputConfirmation" data-th-text="#{Profil.confirmation.req}"></label> 
+				<input type="password" id="inputConfirmation" required />
+				<div></div>
+			</li>
 		</th:block>
 		<li>
 			<button type="submit" data-th-text="#{Profil.btn.creer}"></button>
